<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhereIsMySmartphone</string>
    <string name="action_settings">Settings</string>
    <string name="uploading">Uploading</string>
    <string name="please_wait">Uploading files. Please wait.</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="shoes">Shoes</string>
    <string name="hand">Hand</string>
    <string name="current_activity">Current activity</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="record_data">Record data</string>

    <string name="left">Left</string>
    <string name="right">Right</string>

    <string name="standing">Standing</string>
    <string name="sitting">Sitting</string>
    <string name="walking">Walking</string>
    <string name="stairs_up">Stairs up</string>
    <string name="stairs_down">Stairs down</string>

    <string name="call">Call</string>

    <string name="normal">Normal</string>
    <string name="heel">With heel</string>

    <string name="right_front_pocket">Right front pocket</string>
    <string name="right_back_pocket">Right back pocket</string>
    <string name="left_front_pocket">Left front pocket</string>
    <string name="left_back_pocket">Left back pocket</string>
    <string name="bottom_jacket">Bottom jacket</string>
    <string name="top_jacket">Top jacket</string>
    <string name="bag">Bag</string>
    <string name="fanny_pack">Fanny pack</string>
    <string name="backpack">Backpack</string>

    <string name="delete_db">Delete DB</string>
    <string name="upload_db">Upload DB</string>
</resources>
